Fixes #2 - Buttons are now bottom aligned.

--- a/Abrotelia.Web/Themes/default/site.less
+++ b/Abrotelia.Web/Themes/default/site.less
@@ -97,6 +97,11 @@ article, .anart-row {
     width: 330px;
 }
 
+.anart-section-main {
+    min-height: 16.3em;
+    position: relative;
+}
+
 .anart-section-main h3 {
     background-color: transparent;
     background-position: left top;
@@ -130,8 +135,12 @@ article, .anart-row {
 }
 
 .anart-section-main p.anart-btn {
+    bottom: 0;
     font-size: 1.2em;
+    left: 15px;
     margin-top: 20px;
+    position: absolute;
+    right: 15px;
     text-align: right;
 }
 
